// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AccountBox /> should render a disabled button when the form is invalid 1`] = `
<Panel
  bsClass="panel"
  bsStyle="default"
  defaultExpanded={false}
>
  <h2
    className="page-header"
  >
    <FormattedMessage
      id="profile.account.title"
      values={Object {}}
    />
  </h2>
  <Connect(ReduxForm) />
  <Connect(ConfirmPasswordModal) />
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="primary"
    className="col-sm-offset-4"
    disabled={true}
    id="edit-account-profile-button"
    onClick={[Function]}
  >
    <FormattedMessage
      id="global.save_modifications"
      values={Object {}}
    />
  </Button>
</Panel>
`;

exports[`<AccountBox /> should render a disabled button when the form is submitting 1`] = `
<Panel
  bsClass="panel"
  bsStyle="default"
  defaultExpanded={false}
>
  <h2
    className="page-header"
  >
    <FormattedMessage
      id="profile.account.title"
      values={Object {}}
    />
  </h2>
  <Connect(ReduxForm) />
  <Connect(ConfirmPasswordModal) />
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="primary"
    className="col-sm-offset-4"
    disabled={true}
    id="edit-account-profile-button"
    onClick={[Function]}
  >
    <FormattedMessage
      id="global.loading"
      values={Object {}}
    />
  </Button>
</Panel>
`;

exports[`<AccountBox /> should render and enabled button when the form is valid 1`] = `
<Panel
  bsClass="panel"
  bsStyle="default"
  defaultExpanded={false}
>
  <h2
    className="page-header"
  >
    <FormattedMessage
      id="profile.account.title"
      values={Object {}}
    />
  </h2>
  <Connect(ReduxForm) />
  <Connect(ConfirmPasswordModal) />
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="primary"
    className="col-sm-offset-4"
    disabled={false}
    id="edit-account-profile-button"
    onClick={[Function]}
  >
    <FormattedMessage
      id="global.save_modifications"
      values={Object {}}
    />
  </Button>
</Panel>
`;
